force-app/main/default/objects/Charger_Opp_Line_Junction__c/Charger_Opp_Line_Junction__c.object-meta.xml
<CustomObject>
    <label>Charger Opp Line Junction</label>
    <nameField>
        <displayFormat>COOL-{000}</displayFormat>
        <label>Charger Opp Line Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charger Opp Lines Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>