force-app/main/default/objects/Charger_Opp_Line_Junction__c/fields/Bus_Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Bus_Opportunity_Close_Date__c</fullName>
    <formula>Electric_Opportunity_Line__r.Opportunity_Line__r.CloseDate</formula>
    <label>Bus Opportunity Close Date</label>
    <type>Date</type>
</CustomField>