force-app/main/default/objects/Charger_Opp_Line_Junction__c/fields/Bus_Opportunity_Probability__c.field-meta.xml
<CustomField>
    <fullName>Bus_Opportunity_Probability__c</fullName>
    <formula>text(Electric_Opportunity_Line__r.Opportunity_Line__r.Order_Probability__c)</formula>
    <label>Bus Opportunity Probability</label>
    <type>Text</type>
</CustomField>