force-app/main/default/objects/Charger_Opp_Line_Junction__c/fields/Charger_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Charger_Opportunity__c</fullName>
    <label>Charger Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Charger Opp Lines Junction</relationshipLabel>
    <relationshipName>Charger_Opp_Lines_Junction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>