force-app/main/default/objects/Charger_Opp_Line_Junction__c/fields/Electric_Opportunity_Line__c.field-meta.xml
<CustomField>
    <fullName>Electric_Opportunity_Line__c</fullName>
    <label>Electric Opportunity Line</label>
    <referenceTo>Opportunity_Line__c</referenceTo>
    <relationshipLabel>Charger Opp Lines Junction</relationshipLabel>
    <relationshipName>Charger_Opp_Lines_Junction</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>